# tickcal

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  README.zh-CN.md  build.rs  cargo-generate.toml
.cargo/: config.toml
.github/workflows/: ci.yml
linux/: calendar.desktop  tickcal.desktop
src/: db.rs  lifespan.rs  main.rs  model.rs  platform.rs  settings.rs  state.rs  util.rs  view_model.rs  viewmodel.rs  vm.rs
src/app_logic/: calendar.rs  mod.rs  task.rs  todo.rs
src/calendar/: bridge.rs  message.rs  mod.rs  model.rs  update.rs
src/models/: calendar_model.rs  mod.rs  task_model.rs  todo_model.rs
src/services/: mod.rs  store.rs
ui/: app-window.slint
ui/components/: about-dialog.slint  calendar-day-cell.slint  calendar-grid.slint  calendar-header.slint  calendar-view.slint  calendar-weekday-label.slint  menu-bar.slint  quit-dialog.slint  settings-dialog.slint  todo-input.slint  todo-item-row.slint  todo-panel.slint
ui/components/calendar/: calendar-day-cell.slint  calendar-grid.slint  calendar-header.slint  calendar-view.slint  calendar-weekday-label.slint
ui/components/common/: button.slint  icon-button.slint  nav-button.slint  (+2 more)
ui/config/: calendar-config.slint
ui/globals/: task-state.slint  todo-state.slint  tray-state.slint
ui/pages/: calendar-page.slint  placeholder-page.slint
ui/theme/: dark-palette.slint  fluent-tokens.slint  fluent2-tokens.slint  light-palette.slint  theme-palette.slint  theme-state.slint
ui/types/: calendar-types.slint  task-types.slint  todo-types.slint
windows/: tickcal.exe.manifest
(+6 files in other folders)
